# python_2025_course

./: .gitignore  2 pointers.py  pyproject.toml
cpython/: 0_case.py  1_case.py  2_case.py  3_case.py  readme.md  readme1.md  Гайд.md
cpython/LowLevelStuff/: CMakeLists.txt  LowLevelStuff.cpp  LowLevelStuff.h
week01/: 2pointers.py  add_request.py  argsparse.md  lec.py  practice.py
week02/: cont_with_most_wat.py
week2-DZ/: solve.py
